--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-1, 1920x1080@165, 0x0, 1
 
-###################
+###################<
 ### MY PROGRAMS ###
 ###################
 
@@ -48,7 +48,7 @@ $browser = zen-browser
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24 
-exec-once = waybar & hyprpaper & zen-browser
+exec-once = agsv1 & hyprpaper & zen-browser
 exec-once = swaync
 
 
@@ -96,11 +96,16 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        sharp = false
+        ignore_window = true
+        color = rgba(1a1a1aee) # Hauptfarbe des Schattens
+        color_inactive = rgba(1a1a1a88) # Farbe für inaktive Fenster
+        scale = 1.0 # Standard-Skalierung
+    }
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
@@ -240,8 +245,8 @@ bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
 bind = $mainMod CTRL, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -272,7 +277,8 @@ bind = $mainMod, F, fullscreen
 # Custom keybinds apps
 bind = $mainMod, Z, exec, $browser
 bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider 
-bind = $mainMod SHIFT, S, exec, hyprshot -m output --clipboard-only
+bind = $mainMod SHIFT, S, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
+bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
 bind = $mainMod, H, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copyh
 
 ##############################
