add / update .config files

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -75,7 +75,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(800080ee) rgba(ff69b4ee) 45deg  # Purple to Pink with 45-degree gradient
+    col.active_border = rgba(505050ee) rgba(707070ee) 45deg  # Purple to Pink with 45-degree gradient
     col.inactive_border = rgba(595959aa)
 
 
@@ -200,7 +200,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, swaylock
+bind = $mainMod, L, exec, hyprlock
 
 
 # Move focus with mainMod + arrow keys
@@ -310,3 +310,14 @@ workspace = 5, monitor:DP-1
 workspace = 6, monitor:DP-1
 workspace = 7, monitor:DP-1
 workspace = 8, monitor:DP-1
+
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.5, waybar
+
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
