--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,88 +1,86 @@
-
+source = /home/arkaizn/.cache/wal/colors-hyprland
 
 background {
-    monitor =
-    path = $HOME/.config/hypr/wallpaper.png  # only png supported for now
-    # color = $color1
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_size = 4
-    blur_passes = 3 # 0 disables blurring
-    noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
-    brightness = 0.8000
-    vibrancy = 0.2100
-    vibrancy_darkness = 0.0
+    monitor = DP-1
+    path = /home/arkaizn/.config/hypr/wallpaper.png
+    blur_size = 7
+    blur_passes = 2
+    brightness = .4
 }
-
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(FFFFFF)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-    position = 0, -20
+    size = 6%, 4%
+    outline_thickness = 0
+    dots_rounding = 4
+    dots_spacing = .5
+    dots_fase_time = 300
+    inner_color = $backgroundCol # no fill
+    outer_color = $backgroundCol $backgroundCol
+    check_color= $backgroundCol $backgroundCol
+    fail_color= $backgroundCol $backgroundCol
+    font_color = $color9
+    font_family = CodeNewRoman Nerd Font Propo
+    fade_on_empty = false
+    shadow_color = rgba(0,0,0,0.5)
+    shadow_passes = 1
+    shadow_size = 5
+    rounding = 20
+    placeholder_text = <i></i>
+    fail_text = <b>FAIL</b>
+    fail_timeout = 300
+    position = 0, -100
+    halign = center
+    valign = center
+}
+label {
+    monitor =
+    text = cmd[update:1000] date +"<b>%I</b>"
+    color = $color9
+    font_size = 200
+    font_family = CodeNewRoman Nerd Font Propo
+    shadow_passes = 0
+    shadow_size = 5
+    position = -120, 410
     halign = center
     valign = center
 }
 
-label {
-    monitor =
-    #clock
-    text = cmd[update:1000] echo "$TIME"
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 55
-    font_family = Fira Semibold
-    position = -100, 70
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
-}
 
 label {
     monitor =
-    text = $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 20
-    font_family = Fira Semibold
-    position = -100, 160
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-image {
-    monitor =
-    path = $HOME/.cache/square_wallpaper.png
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 4
-    border_color = rgb(221, 221, 221)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 200
+    text = cmd[update:1000] date +"<b>%M</b>"
+    color = rgba(150,150,150, .4)
+    font_size = 200
+    font_family = CodeNewRoman Nerd Font Propo
+    shadow_passes = 0
+    shadow_size = 5
+    position = 120, 230
     halign = center
     valign = center
 }
+label {
+    monitor =
+    text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>"
+    color = $color4
+    font_size = 40
+    font_family = CodeNewRoman Nerd Font Propo
+    shadow_passes = 0
+    shadow_size = 4
+    position = -40,-20
+    halign = right
+    valign = top
+}
+label {
+    monitor =
+    text = <i>Hello</i> <b>$USER</b>
+    color = $color5 
+    font_size = 40
+    font_family = CodeNewRoman Nerd Font Propo
+    shadow_passes = 0
+    shadow_size = 4
+    position = 40,-20
+    halign = left
+    valign = top
+}
+
+
