--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,9 +48,9 @@ $browser = zen-browser
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24 
-exec-once = agsv1 & hyprpaper & zen-browser
+exec-once = waybar & hyprpaper & zen-browser
 exec-once = swaync
-
+exec-once = swww-daemon
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -90,29 +90,34 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        sharp = false
-        ignore_window = true
-        color = rgba(1a1a1aee) # Hauptfarbe des Schattens
-        color_inactive = rgba(1a1a1a88) # Farbe für inaktive Fenster
-        scale = 1.0 # Standard-Skalierung
-    }
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    rounding = 4
+    active_opacity = 0.9
+    inactive_opacity = 0.7
+    fullscreen_opacity = 1
+# https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
-        passes = 1
+        passes = 5
+        new_optimizations = true
+        ignore_opacity = true
+        xray = false
+        popups = true
+        blurls = waybar
+        blurls = wofi
+        blurls = swaync-control-center
+        blurls = swaync-notification-window
+    }
 
-        vibrancy = 0.1696
+    shadow {
+        enabled = false
+        range = 4
+        render_power = 3
+        sharp = true
+        ignore_window = true
+        color = rgba(1a1a1aee) # Hauptfarbe des Schattens
+        color_inactive = rgba(1a1a1a88) # Farbe für inaktive Fenster
+        scale = 10.0 # Standard-Skalierung
     }
 }
 
