--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=DP-1, 1920x1080@165, 0x0, 1
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nautilus
+$fileManager = thunar
 $menu = wofi --show drun
 $browser = zen-browser
 
@@ -47,10 +47,9 @@ $browser = zen-browser
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = hyprctl setcursor Bibata-Modern-Ice 24 
-exec-once = waybar & hyprpaper & zen-browser
-exec-once = swaync
-exec-once = swww-daemon
+exec-once = hyprctl setcursor Bibata-Modern-Ice 24 # cursor
+exec-once = swaync & waybar & swww-daemon
+exec-once = $browser
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -124,9 +123,7 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
     animation = windows, 1, 7, myBezier
@@ -154,7 +151,6 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
-
 #############
 ### INPUT ###
 #############
@@ -166,11 +162,8 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-
     follow_mouse = 1
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
     touchpad {
         natural_scroll = false
     }
@@ -178,16 +171,18 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_distance = 300
+    workspace_swipe_cancel_ratio = .05
+    workspace_swipe_min_speed_to_force = 0
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
-    sensitivity = -1
+    sensitivity = 0
 }
-
 
 ###################
 ### KEYBINDINGS ###
@@ -286,6 +281,7 @@ bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider
 bind = $mainMod SHIFT, S, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
 bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
 bind = $mainMod, H, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copyh
+bind = $mainMod, W, exec, bash /home/arkaizn/.config/hypr/wallpapers/switch_wallpaper.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
