add wallpaper switch and updated hypr files

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,8 +1,14 @@
-source = /home/arkaizn/.cache/wal/colors-hyprland
+source = /home/arkaizn/.cache/wal/hyprlock_colors
 
+general{
+    grace=2
+    ignore_empty_input=true
+    hide_cursor=true
+    input_block_mouse = true
+}
 background {
-    monitor = DP-1
-    path = /home/arkaizn/.config/hypr/wallpaper.png
+    monitor =
+    path = /home/arkaizn/.config/hypr/wallpapers/pywallpaper.jpg
     blur_size = 7
     blur_passes = 2
     brightness = .4
@@ -14,10 +20,10 @@ input-field {
     dots_rounding = 4
     dots_spacing = .5
     dots_fase_time = 300
-    inner_color = $backgroundCol # no fill
-    outer_color = $backgroundCol $backgroundCol
-    check_color= $backgroundCol $backgroundCol
-    fail_color= $backgroundCol $backgroundCol
+    inner_color = $background # no fill
+    outer_color = $background $background
+    check_color= $background $background
+    fail_color= $background $background
     font_color = $color9
     font_family = CodeNewRoman Nerd Font Propo
     fade_on_empty = false
