--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,25 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-1, 1920x1080@165, 0x0, 1
+# monitor=eDP-1, 1920x1200@60, 0x0, 1.5
+# monitor=DP-5, 1920x1080@75, 3840x0, 1
+# monitor=DP-6, 1920x1080@165, 1920x0, 1
+# monitor=DP-3, 1920x1080@75, 3840x0, 1
+# monitor=DP-4, 1920x1080@165, 1920x0, 1
+# Federi
+# monitor=DP-5, 2560x1440@75, 1920x0, 1
+# monitor=DP-4, 2560x1440@75, 4480x0, 1
+
+
+#XWayland 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
+# toolkit-specific scale
+env = GDK_SCALE,2
+env = XCURSOR_SIZE,32
 
 ###################<
 ### MY PROGRAMS ###
@@ -34,7 +53,7 @@ monitor=DP-1, 1920x1080@165, 0x0, 1
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = wofi --show drun -n
 $browser = zen-browser
 
 
@@ -49,7 +68,6 @@ $browser = zen-browser
 # exec-once = nm-applet &
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24 # cursor
 exec-once = swaync & waybar & swww-daemon
-exec-once = $browser
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -69,7 +87,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -194,13 +212,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,w
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, bash /home/arkaizn/.config/hypr/hyprlock/hyprlock.sh
 
 
 # Move focus with mainMod + arrow keys
@@ -316,9 +333,14 @@ layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
 
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = ignorealpha 0.5, wofi
+
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
+
