--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -4,7 +4,7 @@
         "reload_style_on_change": true,
         "modules-left": ["custom/notification","clock","custom/pacman","tray"],
         "modules-center": ["hyprland/workspaces"],
-        "modules-right": ["group/expand","bluetooth","network","battery"],
+        "modules-right": ["group/expand","bluetooth","custom/sound","network","battery"],
 
 
         "hyprland/workspaces": {
@@ -45,7 +45,12 @@
             "tooltip-format-disconnected": "Error",
             "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
             "tooltip-format-ethernet": "{ifname} 🖧 ",
-            "on-click": "kitty nmtui"
+            "on-click": "iwgtk"
+        },
+        "custom/sound": {
+            "format": "",
+            "on-click": "pavucontrol",
+            "tooltip": false
         },
         "bluetooth": {
             "format-on": "󰂯",
@@ -80,7 +85,7 @@
             ],
         },
         "custom/pacman": {
-            "format": "󰅢 {}",
+            "format": "󰅢  {}",
             "interval": 600,   
             "exec": "checkupdates | wc -l",
             "exec-if": "exit 0",
