--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -15,12 +15,12 @@ background {
 }
 input-field {
     monitor =
-    size = 6%, 4%
+    size = 15%, 4%
     outline_thickness = 0
     dots_rounding = 4
     dots_spacing = .5
     dots_fase_time = 300
-    inner_color = $background # no fill
+    inner_color = $color0 # no fill
     outer_color = $background $background
     check_color= $background $background
     fail_color= $background $background
@@ -30,7 +30,7 @@ input-field {
     shadow_color = rgba(0,0,0,0.5)
     shadow_passes = 1
     shadow_size = 5
-    rounding = 20
+    rounding = 15
     placeholder_text = <i></i>
     fail_text = <b>FAIL</b>
     fail_timeout = 300
@@ -60,13 +60,13 @@ label {
     font_family = CodeNewRoman Nerd Font Propo
     shadow_passes = 0
     shadow_size = 5
-    position = 120, 230
+    position = 180, 230
     halign = center
     valign = center
 }
 label {
     monitor =
-    text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>"
+    text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>" # 
     color = $color4
     font_size = 40
     font_family = CodeNewRoman Nerd Font Propo
