add virtual monitor and add todo to roadmap

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,6 +29,8 @@ monitor=DP-1, 1920x1080@165, 0x0, 1
 # monitor=DP-6, 1920x1080@165, 1920x0, 1
 # monitor=DP-3, 1920x1080@75, 3840x0, 1
 # monitor=DP-4, 1920x1080@165, 1920x0, 1
+# VMware Virtual Machine
+# monitor=Virtual-1, 1718x920@60 0x0, 1
 # Federi
 # monitor=DP-5, 2560x1440@75, 1920x0, 1
 # monitor=DP-4, 2560x1440@75, 4480x0, 1
