update hypr config and add window rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-1, 1920x1080@165, 0x0, 1
+monitor=HDMI-A-1, 1920x1080@75, 1920x0, 1
 # monitor=eDP-1, 1920x1200@60, 0x0, 1.5
 # monitor=DP-5, 1920x1080@75, 3840x0, 1
 # monitor=DP-6, 1920x1080@165, 1920x0, 1
@@ -38,9 +39,9 @@ monitor=DP-1, 1920x1080@165, 0x0, 1
 
 #XWayland 
 # unscale XWayland
-xwayland {
-  force_zero_scaling = true
-}
+#xwayland {
+#  force_zero_scaling = true
+#}
 
 # toolkit-specific scale
 env = GDK_SCALE,2
@@ -53,7 +54,7 @@ env = XCURSOR_SIZE,32
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun -n
 $browser = zen-browser
@@ -79,6 +80,8 @@ exec-once = swaync & waybar & swww-daemon
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
@@ -301,7 +304,8 @@ bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider
 bind = $mainMod SHIFT, S, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
 bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
 bind = $mainMod, H, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copyh
-bind = $mainMod, W, exec, bash /home/arkaizn/.config/hypr/wallpapers/switch_wallpaper.sh
+bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
+bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -321,6 +325,17 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# Custom GTK app
+windowrule = float, title:^Hyprland Helper$
+windowrule = monitor 1, title:^Hyprland Helper$  # Use monitor number
+windowrule = move 1508 45, title:^Hyprland Helper$
+windowrule = animation slide, title:^Hyprland Helper$
+windowrule = animation slide:top, title:^Hyprland Helper$
+
+# Floating and centered alacritty terminal
+windowrulev2 = float, class:^(floating-center)$
+windowrulev2 = center, class:^(floating-center)$
+
 
 # workspaces
 workspace = 1, monitor:DP-1
