--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,18 +36,19 @@ monitor=HDMI-A-1, 1920x1080@75, 1920x0, 1
 # monitor=DP-5, 2560x1440@75, 1920x0, 1
 # monitor=DP-4, 2560x1440@75, 4480x0, 1
 
+################
+### XWayland ###
+################
 
-#XWayland 
-# unscale XWayland
-#xwayland {
-#  force_zero_scaling = true
-#}
+### unscale XWayland ###
+xwayland {
+  force_zero_scaling = true
+}
+### toolkit-specific scale ###
+# env = GDK_SCALE,2
+# env = XCURSOR_SIZE,32
 
-# toolkit-specific scale
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,32
-
-###################<
+###################
 ### MY PROGRAMS ###
 ###################
 
@@ -55,7 +56,7 @@ env = XCURSOR_SIZE,32
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = wofi --show drun -n
 $browser = zen-browser
 
@@ -335,6 +336,10 @@ windowrule = animation slide:top, title:^Hyprland Helper$
 # Floating and centered alacritty terminal
 windowrulev2 = float, class:^(floating-center)$
 windowrulev2 = center, class:^(floating-center)$
+
+# opacity of gtk apps
+windowrulev2 = opacity 0.85 0.85,class:^(gedit|nautilus|nwg-look|thunar)$
+
 
 
 # workspaces
