add pywal to hypr config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
-# test
+source = /home/$USER/.cache/wal/colors-hyprland
 
 ################
 ### MONITORS ###
@@ -98,8 +98,10 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(505050ee) rgba(707070ee) 45deg  # Purple to Pink with 45-degree gradient
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $color9
+    col.inactive_border = $color5
+    #col.active_border = rgba(505050ee) rgba(707070ee) 45deg  # Purple to Pink with 45-degree gradient
+    #col.inactive_border = rgba(595959aa)
 
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
