--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -72,6 +72,7 @@ $browser = zen-browser
 # exec-once = nm-applet &
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24 # cursor
 exec-once = swaync & waybar & swww-daemon
+exec-once = wl-paste --watch cliphist store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -222,11 +223,22 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,w
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, H, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
+
+# Custom Keybinds
+bind = CTRL ALT, Delete, exec, wlogout
 bind = $mainMod, L, exec, bash /home/arkaizn/.config/hypr/hyprlock/hyprlock.sh
+bind = $mainMod, Z, exec, $browser
+bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider 
+bind = $mainMod SHIFT, S, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
+bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
+bind = $mainMod, V, exec, cliphist list | wofi -S dmenu -n | cliphist decode | wl-copy
+bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
+bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 
 
 # Move focus with mainMod + arrow keys
@@ -297,18 +309,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Custom Keybinds
-bind = CTRL ALT, Delete, exec, wlogout
-bind = $mainMod, F, fullscreen
-
-# Custom keybinds apps
-bind = $mainMod, Z, exec, $browser
-bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider 
-bind = $mainMod SHIFT, S, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
-bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # screenshot into clipboard
-bind = $mainMod, H, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copyh
-bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
-bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
