change wallpaper and fix hyprlock

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -4,26 +4,26 @@ general{
     grace=2
     ignore_empty_input=true
     hide_cursor=true
-    input_block_mouse = true
+    input_block_mouse = false
 }
 background {
-    monitor =
-    path = /home/arkaizn/.config/hypr/wallpapers/pywallpaper.jpg
+    monitor = DP-1
+    path = /home/arkaizn/.config/hypr/wallpapers/pywallpaper.png
     blur_size = 7
     blur_passes = 2
     brightness = .4
 }
 input-field {
-    monitor =
+    monitor = DP-1
     size = 15%, 4%
     outline_thickness = 0
     dots_rounding = 4
     dots_spacing = .5
-    dots_fase_time = 300
-    inner_color = $color0 # no fill
-    outer_color = $background $background
-    check_color= $background $background
-    fail_color= $background $background
+    dots_fade_time = 300
+    inner_color = rgba(150,150,150, .4) # no fill
+    outer_color = $background
+    check_color= $background 
+    fail_color= $background 
     font_color = $color9
     font_family = CodeNewRoman Nerd Font Propo
     fade_on_empty = false
@@ -39,7 +39,7 @@ input-field {
     valign = center
 }
 label {
-    monitor =
+    monitor = DP-1
     text = cmd[update:1000] date +"<b>%I</b>"
     color = $color9
     font_size = 200
@@ -53,7 +53,7 @@ label {
 
 
 label {
-    monitor =
+    monitor = DP-1
     text = cmd[update:1000] date +"<b>%M</b>"
     color = rgba(150,150,150, .4)
     font_size = 200
@@ -65,7 +65,7 @@ label {
     valign = center
 }
 label {
-    monitor =
+    monitor = DP-1
     text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>" # 
     color = $color4
     font_size = 40
@@ -77,7 +77,7 @@ label {
     valign = top
 }
 label {
-    monitor =
+    monitor = DP-1
     text = <i>Hello</i> <b>$USER</b>
     color = $color5 
     font_size = 40
@@ -89,4 +89,30 @@ label {
     valign = top
 }
 
+label {
+    monitor = DP-1
+    text = cmd[interval:5] playerctl metadata --format "{{ artist }} - {{ title }}"
+    color = rgba(255, 255, 255, 1.0)
+    font_size = 14
+    font_family = CodeNewRoman Nerd Font Propo
+    shadow_passes = 1
+    shadow_size = 2
+    position = 0, -500
+    halign = center
+    valign = center
+}
 
+image {
+    monitor = DP-1
+    path = ~/.config/hypr/hyprlock/album_art.png
+    size = 140, 140
+    rounding = 12
+    border_size = 2
+    border_color = rgba(255, 255, 255, 0.15)
+    shadow_passes = 2
+    shadow_size = 10
+    shadow_color = rgba(0, 0, 0, 0.4)
+    position = 0, -400
+    halign = center
+    valign = center
+}
