add new conf for playerctl

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,6 +13,13 @@ background {
     blur_passes = 2
     brightness = .4
 }
+background {
+    monitor = HDMI-A-1
+    path = /home/arkaizn/.config/hypr/wallpapers/pywallpaper.png
+    blur_size = 7
+    blur_passes = 2
+    brightness = .4
+}
 input-field {
     monitor = DP-1
     size = 15%, 4%
@@ -37,6 +44,8 @@ input-field {
     position = 0, -100
     halign = center
     valign = center
+
+    placeholder_text = <i>Password ➔ then Touch your Security Key</i>
 }
 label {
     monitor = DP-1
@@ -50,7 +59,6 @@ label {
     halign = center
     valign = center
 }
-
 
 label {
     monitor = DP-1
@@ -104,15 +112,18 @@ label {
 
 image {
     monitor = DP-1
-    path = ~/.config/hypr/hyprlock/album_art.png
-    size = 140, 140
+    path = 
+    size = 120
     rounding = 12
     border_size = 2
     border_color = rgba(255, 255, 255, 0.15)
     shadow_passes = 2
     shadow_size = 10
     shadow_color = rgba(0, 0, 0, 0.4)
+    reload_time = 2
+    reload_cmd = ~/.config/hypr/hyprlock/playerctlock.sh --arturl
     position = 0, -400
     halign = center
     valign = center
+    opacity=0.5
 }
