--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,8 +3,8 @@ source = /home/arkaizn/.cache/wal/hyprlock_colors
 general{
     grace=2
     ignore_empty_input=true
-    hide_cursor=true
-    input_block_mouse = false
+    hide_cursor= true
+    input_block_mouse = true
 }
 background {
     monitor = DP-1
