--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -220,7 +220,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,w
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, H, togglefloating,
@@ -228,9 +228,11 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
+bind = $mainMod, TAB, fullscreen, 1
+
 
 # Custom Keybinds
-bind = CTRL ALT, Delete, exec, wlogout
+bind = $mainMod, escape, exec, wlogout
 bind = $mainMod, L, exec, bash /home/arkaizn/.config/hypr/hyprlock/hyprlock.sh
 bind = $mainMod, Z, exec, $browser
 bind = CTRL ALT, C, exec, flatpak run sh.cider.Cider 
