--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,6 +35,8 @@ monitor=HDMI-A-1, 1920x1080@75, 1920x0, 1
 # Federi
 # monitor=DP-5, 2560x1440@75, 1920x0, 1
 # monitor=DP-4, 2560x1440@75, 4480x0, 1
+# TV
+#monitor=HDMI-A-1, 3840x2160@60, 1920x0, 2
 
 ################
 ### XWayland ###
@@ -147,19 +149,59 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+#https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    enabled = yes
+    
+    # Animation curves
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0.0, 0, 1.0
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.05
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+    bezier = win10, 0, 0, 0, 1
+    bezier = gnome, 0, 0.85, 0.3, 1
+    bezier = funky, 0.46, 0.35, -0.2, 1.2
+    bezier = menu_accel, 0.38, 0.04, 1, 0.07
+    bezier = menu_decel, 0.1, 1, 0, 1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    # Animation configs
+    animation = windows, 1, 2, overshot, slide
+    animation = windowsIn, 1, 3, overshot, slide
+    animation = windowsOut, 1, 3, overshot, slide
     animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = fade, 1, 0.1, default
+    animation = fadeLayersIn, 1, 2, overshot
+    animation = fadeLayersOut, 1, 0.5, overshot
+    animation = layers, 1, 2, overshot, slide
+    animation = layersIn, 1, 1, overshot, slide left
+    animation = layersOut, 1, 1, default
+    animation = workspaces, 1, 3, overshot, slide
+    animation = specialWorkspace, 1, 3, overshot, slidefadevert
 }
+
+# Plugins
+# Overview
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(000000)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = false # laptop touchpad, 4 fingers
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = false
+    }
+}
+
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -228,7 +270,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
-bind = $mainMod, TAB, fullscreen, 1
+bind = $mainMod, G, fullscreen, 1
 
 
 # Custom Keybinds
@@ -241,6 +283,9 @@ bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only # scree
 bind = $mainMod, V, exec, cliphist list | wofi -S dmenu -n | cliphist decode | wl-copy
 bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
 bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
+bind = $mainMod, TAB, exec,swaync-client -t -sw
+#plugin
+bind = $mainMod, section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 
 # Move focus with mainMod + arrow keys
@@ -347,14 +392,14 @@ windowrulev2 = opacity 0.85 0.85,class:^(gedit|nautilus|nwg-look|thunar)$
 
 
 # workspaces
-workspace = 1, monitor:DP-1
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1
-workspace = 6, monitor:DP-1
-workspace = 7, monitor:DP-1
-workspace = 8, monitor:DP-1
+#workspace = 1, monitor:DP-1
+#workspace = 2, monitor:DP-1
+#workspace = 3, monitor:DP-1
+#workspace = 4, monitor:DP-1
+#workspace = 5, monitor:DP-1
+#workspace = 6, monitor:DP-1
+#workspace = 7, monitor:DP-1
+#workspace = 8, monitor:DP-1
 
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
