exclude wlogout from animations

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -382,12 +382,15 @@ windowrule = move 1508 45, title:^Hyprland Helper$
 windowrule = animation slide, title:^Hyprland Helper$
 windowrule = animation slide:top, title:^Hyprland Helper$
 
+
 # Floating and centered alacritty terminal
 windowrulev2 = float, class:^(floating-center)$
 windowrulev2 = center, class:^(floating-center)$
 
 # opacity of gtk apps
 windowrulev2 = opacity 0.85 0.85,class:^(gedit|nautilus|nwg-look|thunar)$
+
+
 
 
 
@@ -416,3 +419,4 @@ layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
 
+layerrule = noanim, logout_dialog$
