add pyprland and new binds for vnc connection

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ source = /home/$USER/.cache/wal/colors-hyprland
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-1, 1920x1080@165, 0x0, 1
 monitor=HDMI-A-1, 1920x1080@75, 1920x0, 1
+#monitor=HEADLESS-2,1920x1080@60,300x1080,1.5
 # monitor=eDP-1, 1920x1200@60, 0x0, 1.5
 # monitor=DP-5, 1920x1080@75, 3840x0, 1
 # monitor=DP-6, 1920x1080@165, 1920x0, 1
@@ -75,7 +76,10 @@ $browser = zen-browser
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24 # cursor
 exec-once = swaync & waybar & swww-daemon
 exec-once = wl-paste --watch cliphist store
-
+# ensure plugins (and their dispatchers) are loaded before binds
+exec-once = hyprpm reload -n
+exec-once = hyprctl plugin load /usr/lib/hyprland/plugins/hyprexpo.so
+exec-once = /usr/bin/pypr
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -286,7 +290,7 @@ bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 bind = $mainMod, TAB, exec,swaync-client -t -sw
 #plugin
 bind = $mainMod, section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-
+bind = $mainMod, X, exec, pypr expose
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -357,6 +361,13 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 
+# vnc
+ bind = SUPER, COMMA , exec, sh -c "wayvncctl output-set DP-1"
+ bind = SUPER, PERIOD , exec, sh -c "wayvncctl output-set HDMI-A-1"
+ bind = SUPER, MINUS , exec, sh -c "wayvncctl output-set HEADLESS-2"
+
+
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -393,7 +404,7 @@ windowrulev2 = opacity 0.85 0.85,class:^(gedit|nautilus|nwg-look|thunar)$
 
 
 
-
+workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow:false
 # workspaces
 #workspace = 1, monitor:DP-1
 #workspace = 2, monitor:DP-1
