update pywal / wallpaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ xwayland {
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = thunar
 $menu = wofi --show drun -n
 $browser = zen-browser
 
@@ -289,8 +289,8 @@ bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
 bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 bind = $mainMod, TAB, exec,swaync-client -t -sw
 #plugin
-bind = $mainMod, section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-bind = $mainMod, X, exec, pypr expose
+#bind = $mainMod, section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+#bind = $mainMod, X, exec, pypr expose
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
