--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,20 +1,30 @@
-foreground   #dde0e1
-background   #15171d
-cursor       #dde0e1
+foreground         #f5ecc4
+background         #09090c
+background_opacity 1.0
+cursor             #f5ecc4
 
-color0       #15171d
-color8       #9a9c9d
-color1       #768A96
-color9       #768A96
-color2       #4AAEAE
-color10      #4AAEAE
-color3       #919EA6
-color11      #919EA6
-color4       #AAB3B7
-color12      #AAB3B7
-color5       #B3BBC0
-color13      #B3BBC0
-color6       #B8C5CA
-color14      #B8C5CA
-color7       #dde0e1
-color15      #dde0e1
+active_tab_foreground     #09090c
+active_tab_background     #f5ecc4
+inactive_tab_foreground   #f5ecc4
+inactive_tab_background   #09090c
+
+active_border_color   #f5ecc4
+inactive_border_color #09090c
+bell_border_color     #66574D
+
+color0       #09090c
+color8       #aba589
+color1       #66574D
+color9       #66574D
+color2       #9B5C30
+color10      #9B5C30
+color3       #B77243
+color11      #B77243
+color4       #EA9D52
+color12      #EA9D52
+color5       #DEA357
+color13      #DEA357
+color6       #748883
+color14      #748883
+color7       #f5ecc4
+color15      #f5ecc4
