--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -77,8 +77,6 @@ exec-once = hyprctl setcursor Bibata-Modern-Ice 24 # cursor
 exec-once = swaync & waybar & swww-daemon
 exec-once = wl-paste --watch cliphist store
 # ensure plugins (and their dispatchers) are loaded before binds
-exec-once = hyprpm reload -n
-exec-once = hyprctl plugin load /usr/lib/hyprland/plugins/hyprexpo.so
 exec-once = /usr/bin/pypr
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -191,22 +189,6 @@ animations {
     animation = specialWorkspace, 1, 3, overshot, slidefadevert
 }
 
-# Plugins
-# Overview
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
-    }
-}
-
-
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -258,6 +240,26 @@ device {
     sensitivity = 0
 }
 
+######################
+### PLUGIN SETTINGS ##
+######################
+
+
+# Hyprexpo
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(000000)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = false # laptop touchpad, 4 fingers
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = false
+    }
+}
+
+
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -289,7 +291,7 @@ bind = $mainMod, W, exec, bash ~/.config/hypr/wallpapers/switch_wallpaper.sh
 bind = $mainMod, B, exec, ~/git/GTK-APP/files/popup.py
 bind = $mainMod, TAB, exec,swaync-client -t -sw
 #plugin
-#bind = $mainMod, section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+bind = $mainMod, Section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 #bind = $mainMod, X, exec, pypr expose
 
 # Move focus with mainMod + arrow keys
