add vnc submap keypassthrough

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -294,6 +294,25 @@ bind = $mainMod, TAB, exec,swaync-client -t -sw
 bind = $mainMod, Section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 #bind = $mainMod, X, exec, pypr expose
 
+# vnc
+# 1) Enter passthrough mode on key‐up (so you can release SUPER immediately)
+bindr = SUPER, P, submap, vnc_passthrough
+
+submap = vnc_passthrough
+
+# 2) Forward every keystroke to the VNC window, ignoring any held modifiers
+#
+# bindi = bind, ignore mods (i → ignore any modifiers)
+# catchall → match any key
+# pass → forward it to the window matching the regex
+bind = , catchall, pass, ^Vncviewer$
+
+# 3) Exit passthrough with Escape
+bind  =      , Escape, submap, reset
+
+submap = reset
+
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
