--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -296,7 +296,10 @@ bind = $mainMod, Section, hyprexpo:expo, toggle # can be: toggle, off/disable or
 
 # vnc
 # 1) Enter passthrough mode on key‐up (so you can release SUPER immediately)
-bindr = SUPER, P, submap, vnc_passthrough
+# vnc
+# 1) Enter passthrough mode on key‐up (so you can release SUPER immediately)
+bind = SUPER, P, exec, ydotool key 56:1
+bind = SUPER, P, submap, vnc_passthrough
 
 submap = vnc_passthrough
 
@@ -305,10 +308,11 @@ submap = vnc_passthrough
 # bindi = bind, ignore mods (i → ignore any modifiers)
 # catchall → match any key
 # pass → forward it to the window matching the regex
-bind = , catchall, pass, ^Vncviewer$
+bindi = , catchall, pass, ^Vncviewer$
 
 # 3) Exit passthrough with Escape
-bind  =      , Escape, submap, reset
+bindi = , Escape, exec, ydotool key 56:0
+bindi  = , Escape, submap, reset
 
 submap = reset
 
