remove broken vnc submap

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -294,27 +294,19 @@ bind = $mainMod, TAB, exec,swaync-client -t -sw
 bind = $mainMod, Section, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 #bind = $mainMod, X, exec, pypr expose
 
-# vnc
-# 1) Enter passthrough mode on key‐up (so you can release SUPER immediately)
-# vnc
-# 1) Enter passthrough mode on key‐up (so you can release SUPER immediately)
-bind = SUPER, P, exec, ydotool key 56:1
-bind = SUPER, P, submap, vnc_passthrough
+# # vnc submap passthrough
+# bind = SUPER, P, exec, ydotool key 56:1
+# bind = SUPER, P, submap, vnc_passthrough
 
-submap = vnc_passthrough
+# submap = vnc_passthrough
 
-# 2) Forward every keystroke to the VNC window, ignoring any held modifiers
-#
-# bindi = bind, ignore mods (i → ignore any modifiers)
-# catchall → match any key
-# pass → forward it to the window matching the regex
-bindi = , catchall, pass, ^Vncviewer$
+# bindi = alt, Escape, exec,   ydotool key 56:0
+# bindi = alt, Escape, submap, reset
 
-# 3) Exit passthrough with Escape
-bindi = , Escape, exec, ydotool key 56:0
-bindi  = , Escape, submap, reset
+# bind = , catchall, pass, ^vncviewer
 
-submap = reset
+# submap = reset
+
 
 
 # Move focus with mainMod + arrow keys
