--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,10 +2,28 @@
     "layer": "top",
         "position": "top",
         "reload_style_on_change": true,
-        "modules-left": ["custom/notification","clock","custom/pacman","tray"],
-        "modules-center": ["hyprland/workspaces"],
-        "modules-right": ["group/expand","bluetooth","custom/sound","network","battery"],
-
+        "modules-left": [
+            "custom/notification",
+            "clock","custom/pacman",
+            "tray"
+        ],
+        "modules-center": [
+            "custom/gpuusage",
+            "custom/cpuusage",
+            "memory",
+            "custom/endpoint",
+            "hyprland/workspaces",
+            "custom/endpoint",
+            "custom/gputemp",
+            "custom/cputemp"
+        ],
+        "modules-right": [
+            "group/expand",
+            "bluetooth",
+            "custom/sound",
+            "network",
+            "battery"
+        ],
 
         "hyprland/workspaces": {
             "format": "{icon}",
@@ -39,20 +57,18 @@
             }
         },
         "network": {
-            "format-wifi": "",
+            "format-wifi": " ",
             "format-ethernet":"",
             "format-disconnected": "",
             "tooltip-format-disconnected": "Error",
             "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
-            "tooltip-format-ethernet": "{ifname} 🖧 ",
+            "tooltip-format-ethernet": "{ifname}  ",
             "on-click": "iwgtk"
         },        
         "custom/sound": {
             "interval": 1,
             "exec": "pamixer --get-volume",
             "format": "{}%",
-            "format-muted": "󰝟 Muted",
-            "format-icons": ["󰕿", "󰖀", "󰕾", "󰖁"],
             "on-click": "sh -c 'pavucontrol'",
             "on-scroll-up": "pamixer -i 5",   // Lautstärke erhöhen
             "on-scroll-down": "pamixer -d 5", // Lautstärke verringern
@@ -91,11 +107,11 @@
             ]
         },
         "custom/pacman": {
-            "format": "󰅢  {}",
+            "format": "󰅢 {}",
             "interval": 600,   
-            "exec": "checkupdates | wc -l",
+            "exec": "sh -c \"checkupdates 2>/dev/null | wc -l\"",
             "exec-if": "exit 0",
-            "on-click": "kitty sh -c 'yay; sudo pacman -Syu; echo Done - Press enter to exit; read'; pkill -SIGRTMIN+8 waybar",
+            "on-click": "kitty sh -c 'yay --noconfirm; sudo pacman -Syu --noconfirm; echo Done - Press enter to exit; read'; pkill -SIGRTMIN+8 waybar",
             "signal": 8,
             "tooltip": false
         },
@@ -114,7 +130,7 @@
                 "transition-to-left": true,
                 "click-to-reveal": true
             },
-            "modules": ["custom/expand", "custom/colorpicker","cpu","memory","temperature","custom/endpoint"]
+            "modules": ["custom/expand", "custom/colorpicker","custom/endpoint"]
         },
         "custom/colorpicker": {
             "format": "{}",
@@ -124,19 +140,37 @@
             "on-click": "~/.config/waybar/scripts/colorpicker.sh",
             "signal": 1
         },
-        "cpu": {
-            "format": "󰻠",
-            "tooltip": true
-        },
-        "memory": {
-            "format": ""
-        },
-        "temperature": {
-            "critical-threshold": 80,
-            "format": ""
-        },
         "tray": {
             "icon-size": 14,
             "spacing": 10
+        },
+        "custom/cputemp": {
+            "interval": 5,
+            "exec": "sensors | grep 'Tctl' | awk '{print $2}' | sed 's/+//'",
+            "format": " {}",
+            "tooltip": false
+        },
+        "custom/gputemp": {
+            "interval": 5,
+            "exec": "nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader",
+            "format": "󰢮 {}°C",
+            "tooltip": false
+        },
+        "custom/gpuusage": {
+            "interval": 2,
+            "exec": "sh -c \"nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits\"",
+            "format": "󰢮 {}%",
+            "tooltip": "GPU Util"
+        },
+        "custom/cpuusage": {
+            "interval": 2,
+            "exec": "sh -c \"top -bn1 | awk '/^%?Cpu\\(s\\):/ {print 100 - \\$8}' | xargs printf '%.0f'\"",
+            "format": " {}%",
+            "tooltip": "CPU Util"
+        },
+        "memory": {
+            "interval": 2,
+            "format": " {percentage}%",
+            "tooltip-format": "{used:0.1f}G/{total:0.1f}G"
         }
 } 
