--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -38,7 +38,7 @@
         },
         "custom/notification": {
             "tooltip": false,
-            "format": "",
+            "format": "󰣇",
             "on-click": "swaync-client -t -sw",
             "escape": true
         },
